# Github-Action-Test

./: .env.test  pyproject.toml
.github/workflows/: ci.yaml
src/: config.py  main.py
tests/: test_main.py
