[project]
name = "github_actions_demo"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "GGGoingdown", email = "eddiepai0401@gmail.com"},
]
dependencies = [
    "fastapi>=0.109.1",
    "uvicorn>=0.27.0.post1",
    "pydantic-settings>=2.1.0",
]
requires-python = "==3.10.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false

[tool.pdm.dev-dependencies]
dev = [
    "pytest>=8.0.0",
    "httpx>=0.26.0",
]
